AdventOfCode Day 1 Part 1

--- a/src/AdventCalendar2021.csproj
+++ b/src/AdventCalendar2021.csproj
@@ -8,10 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AdventOfCode\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <None Update="AdventOfCode\Data\Day1Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Knowit\Data\tall.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
