AdventOfCode Day 9 Part 1 - Solved!

--- a/src/AdventCalendar2021.csproj
+++ b/src/AdventCalendar2021.csproj
@@ -32,6 +32,9 @@
     <None Update="AdventOfCode\Data\Day8Input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="AdventOfCode\Data\Day9Input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Knowit\Data\cities.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
